--- a/mokepones/mokepon.html
+++ b/mokepones/mokepon.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokepones!</title>
-    <script src="./js/mokepon.js"></script>
+    <script src="js/mokepon.js"></script>
 </head>
 <body>
     <h1>Mokepones! 🔥💦🌱</h1>
