--- a/mokepones/mokepon.html
+++ b/mokepones/mokepon.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokepones!</title>
-    <script src="js/mokepon.js"></script>
+    <script src="./js/mokepon.js"></script>
 </head>
 <body>
     <h1>Mokepones! 🔥💦🌱</h1>
@@ -34,8 +34,8 @@
     <section id="seleccionar-ataque">
         <h2>Selecciona tu ataque: </h2>
 
-        <p>Tu mascota tiene <span>3</span> vidas</p>
-        <p>La mascota del enemigo tiene <span>3</span> vidas</p>   
+        <p>Tu mascota <span id="mascota-jugador"></span> tiene <span>3</span> vidas</p>
+        <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span>3</span> vidas</p>   
 
         <p>
             <button id="boton-fuego">Fuego!🔥</button>
