se termina el maquetado, tiempo de hacer el CSS

--- a/mokepones/mokepon.html
+++ b/mokepones/mokepon.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokepones!</title>
     <script src="./js/mokepon.js"></script>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Mokepones! 🔥💦🌱</h1>
-
     <section id="seleccionar-mascota">
+        <h1 class="titulo">Mokepones! 🔥💦🌱</h1>
+        
         <h2>Selecciona una mascota: </h2>
         <!-- 
         Hipodoge -> Agua
@@ -32,8 +33,10 @@
     </section>
 
     <section id="seleccionar-ataque">
-        <h2>Selecciona tu ataque: </h2>
+        <h1 class="titulo">Mokepones! 🔥💦🌱</h1>
 
+        <h2>Selecciona tu ataque: </h2>
+        <!-- 💦>🔥>🌱 -->
         <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
         <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>   
 
@@ -44,7 +47,6 @@
         </p>    
     </section>
 
-    <!-- 💦>🔥>🌱 -->
     <section id="mensajes">
     </section>
 
