clase 35, se empieza a maquetar el CSS

--- a/mokepones/mokepon.html
+++ b/mokepones/mokepon.html
@@ -20,13 +20,13 @@
         Tucapalma -> Agua y Tierra
         Pydos -> Tierra y Fuego
         -->
-        <label for="hipodoge">Hipodoge</label>
+        <label class="tarjetas-de-mokepon" for="hipodoge">Hipodoge</label>
         <input type="radio" id="hipodoge" name="mascota"/>
 
-        <label for="capipepo">Capipepo</label>
+        <label class="tarjetas-de-mokepon" for="capipepo">Capipepo</label>
         <input type="radio" id="capipepo" name="mascota"/>
 
-        <label for="ratigueya">Ratigueya</label>
+        <label class="tarjetas-de-mokepon" for="ratigueya">Ratigueya</label>
         <input type="radio" id="ratigueya" name="mascota"/>
 
         <button id="boton-mascota">Seleccionar</button>
