--- a/mokepones/mokepon.html
+++ b/mokepones/mokepon.html
@@ -11,7 +11,7 @@
     <section id="seleccionar-mascota">
         <h1 class="titulo">Mokepones! 🔥💦🌱</h1>
         
-        <h2>Selecciona una mascota: </h2>
+        <h2 class="subtitulo">Selecciona una mascota: </h2>
         <!-- 
         Hipodoge -> Agua
         Capipepo -> Tierra
@@ -20,14 +20,25 @@
         Tucapalma -> Agua y Tierra
         Pydos -> Tierra y Fuego
         -->
-        <label class="tarjetas-de-mokepon" for="hipodoge">Hipodoge</label>
-        <input type="radio" id="hipodoge" name="mascota"/>
+        <div class="tarjetas">
+            <label class="tarjetas-de-mokepon" for="hipodoge">
+                <p>Hipodoge</p>
+                <img src="./assets/mokepons_mokepon_hipodoge_attack.png" alt="hipodoge">
+            </label>
+            <input type="radio" id="hipodoge" name="mascota"/>
 
-        <label class="tarjetas-de-mokepon" for="capipepo">Capipepo</label>
-        <input type="radio" id="capipepo" name="mascota"/>
+            <label class="tarjetas-de-mokepon" for="capipepo">
+                <p>Capipepo</p>
+                <img src="./assets/mokepons_mokepon_capipepo_attack.png" alt="capipepo">
+            </label>
+            <input type="radio" id="capipepo" name="mascota"/>
 
-        <label class="tarjetas-de-mokepon" for="ratigueya">Ratigueya</label>
-        <input type="radio" id="ratigueya" name="mascota"/>
+            <label class="tarjetas-de-mokepon" for="ratigueya">
+                <p>Ratigueya</p>
+                <img src="./assets/mokepons_mokepon_ratigueya_attack.png" alt="ratigueya">
+            </label>
+            <input type="radio" id="ratigueya" name="mascota"/>
+        </div>
 
         <button id="boton-mascota">Seleccionar</button>
     </section>
