--- a/mokepones/mokepon.html
+++ b/mokepones/mokepon.html
@@ -46,24 +46,27 @@
     <section id="seleccionar-ataque">
         <h1 class="titulo">Mokepones! 🔥💦🌱</h1>
 
-        <h2>Selecciona tu ataque: </h2>
+        <h2 class="subtitulo">Selecciona tu ataque: </h2>
         <!-- 💦>🔥>🌱 -->
-        <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
-        <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>   
-
-        <p>
+        <div>
             <button id="boton-fuego">Fuego!🔥</button>
             <button id="boton-agua">Agua!💦</button>
             <button id="boton-tierra">Tierra!🌱</button>
-        </p>    
-    </section>
+        </div>
 
-    <section id="mensajes">
-    </section>
+        <div>
+            <section id="mensajes">
+            </section>
+        
+            <section id="reiniciar">
+                <button id="boton-reiniciar">reiniciar</button>
+            </section>
+        </div>
 
-    <section id="reiniciar">
-        <button id="boton-reiniciar">reiniciar</button>
+        <div>
+            <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
+            <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>   
+        </div>
     </section>
-
 </body>
 </html>
