se hace un poco responsivo el sitio web

--- a/mokepones/mokepon.html
+++ b/mokepones/mokepon.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section id="seleccionar-mascota">
-        <h1 class="titulo">Mokepones! 🔥💦🌱</h1>
+        <h1 class="titulo">Mokepones!<br>🔥💦🌱</h1>
         
         <h2 class="subtitulo">Selecciona una mascota: </h2>
         <!-- 
@@ -44,11 +44,11 @@
     </section>
 
     <section id="seleccionar-ataque">
-        <h1 class="titulo">Mokepones! 🔥💦🌱</h1>
+        <h1 class="titulo">Mokepones!<br>🔥💦🌱</h1>
 
         <h2 class="subtitulo">Selecciona tu ataque: </h2>
         <!-- 💦>🔥>🌱 -->
-        <div>
+        <div id="botones-ataque">
             <button class="boton-ataque" id="boton-fuego">Fuego!🔥</button>
             <button class="boton-ataque" id="boton-agua">Agua!💦</button>
             <button class="boton-ataque" id="boton-tierra">Tierra!🌱</button>
