--- a/mokepones/mokepon.html
+++ b/mokepones/mokepon.html
@@ -19,24 +19,8 @@
         Tucapalma -> Agua y Tierra
         Pydos -> Tierra y Fuego
         -->
-        <div class="tarjetas">
-            <input type="radio" id="hipodoge" name="mascota"/>
-            <label class="tarjetas-de-mokepon" for="hipodoge">
-                <p>Hipodoge</p>
-                <img src="./assets/mokepons_mokepon_hipodoge_attack.png" alt="hipodoge">
-            </label>
-            
-            <input type="radio" id="capipepo" name="mascota"/>
-            <label class="tarjetas-de-mokepon" for="capipepo">
-                <p>Capipepo</p>
-                <img src="./assets/mokepons_mokepon_capipepo_attack.png" alt="capipepo">
-            </label>
-            
-            <input type="radio" id="ratigueya" name="mascota"/>
-            <label class="tarjetas-de-mokepon" for="ratigueya">
-                <p>Ratigueya</p>
-                <img src="./assets/mokepons_mokepon_ratigueya_attack.png" alt="ratigueya">
-            </label>
+        <div id="contenedorTarjetas" class="tarjetas">
+
         </div>
 
         <button id="boton-mascota">Seleccionar</button>
