53, 1 sola fuente de verdad, se cambia un poco el Js

--- a/mokepones/mokepon.html
+++ b/mokepones/mokepon.html
@@ -20,7 +20,7 @@
         Pydos -> Tierra y Fuego
         -->
         <div id="contenedorTarjetas" class="tarjetas">
-
+            <!--Aqui estaran todos los mokepones-->
         </div>
 
         <button id="boton-mascota">Seleccionar</button>
