Se muestran los ataques con el arreglo 54

--- a/mokepones/mokepon.html
+++ b/mokepones/mokepon.html
@@ -19,7 +19,7 @@
         Tucapalma -> Agua y Tierra
         Pydos -> Tierra y Fuego
         -->
-        <div id="contenedorTarjetas" class="tarjetas">
+        <div id="contenedor-tarjetas" class="tarjetas">
             <!--Aqui estaran todos los mokepones-->
         </div>
 
@@ -32,9 +32,7 @@
         <h2 class="subtitulo">Selecciona tu ataque: </h2>
         <!-- 💦>🔥>🌱 -->
         <div id="botones-ataque">
-            <button class="boton-ataque" id="boton-fuego">Fuego!🔥</button>
-            <button class="boton-ataque" id="boton-agua">Agua!💦</button>
-            <button class="boton-ataque" id="boton-tierra">Tierra!🌱</button>
+            <!--Aqui saldran los ataques de los mokepones-->
         </div>
 
         <section id="mensajes">
