57, se componen todos los botones y se cambia la manera de seleccion

--- a/mokepones/mokepon.html
+++ b/mokepones/mokepon.html
@@ -20,7 +20,7 @@
         Pydos -> Tierra y Fuego
         -->
         <div id="contenedor-tarjetas" class="tarjetas">
-            <!--Aqui estaran todos los mokepones-->
+            <!-- tarjetas de mokepon -->
         </div>
 
         <button id="boton-mascota">Seleccionar</button>
@@ -32,7 +32,7 @@
         <h2 class="subtitulo">Selecciona tu ataque: </h2>
         <!-- 💦>🔥>🌱 -->
         <div id="botones-ataque">
-            <!--Aqui saldran los ataques de los mokepones-->
+            <!-- ataques de mokepon -->
         </div>
 
         <section id="mensajes">
