se termina el juego, se arreglaron todos los features, 60

--- a/mokepones/mokepon.html
+++ b/mokepones/mokepon.html
@@ -46,14 +46,14 @@
         <div id="tarjetas-contrincantes">
             <div class="tarjeta-contrincante">
                 <p class="contrincante">Vidas del jugador</p>
-                <p class="vidas-contrincantes" id="vidas-jugador">3</p>
+                <p class="victorias-contrincantes" id="victorias-jugador">0</p>
                 <p id="mascota-jugador"></p>
                 <div class="ataques-realizados" id="ataques-jugador"></div>
             </div>
             
             <div class="tarjeta-contrincante">
                 <p class="contrincante">Vidas del enemigo</p>
-                <p class="vidas-contrincantes" id="vidas-enemigo">3</p>
+                <p class="victorias-contrincantes" id="victorias-enemigo">0</p>
                 <p id="mascota-enemigo"></p>
                 <div class="ataques-realizados" id="ataques-enemigo"></div>
             </div>
