se agrega el poderosisimo Furulillo, primer parche expansion

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         Hipodoge -> Agua
         Capipepo -> Tierra
         Ratigueya -> Fuego
+        Furulillo -> Fuego
         Langostelvis -> Agua y Fuego
         Tucapalma -> Agua y Tierra
         Pydos -> Tierra y Fuego
