se hace la seleccion del mokepon que es 68

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2>Selecciona tus ataques: </h2>
         <h3>Tienes 5 ataques, ordenalos para la secuencia de combate</h3>
         <h4>
-            recuerda que <br>
+            Recuerda que <br>
             Agua🌊 le gana a Fuego🔥 <br>
             Tierra🌱 le gana a Agua🌊 <br>
             Fuego🔥 le gana a Tierra🌱
